<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    tools:context=".Activity.MovieDetailsActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/moviedetails_image_id"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/moviedetails_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/moviedetails_image_id"
                android:paddingLeft="8dp"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/moviedetails_released_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/moviedetails_title_id"
                android:layout_toEndOf="@id/moviedetails_image_id"
                android:paddingStart="8dp"
                android:text="@string/released"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/moviedetails_category_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/moviedetails_released_id"
                android:layout_toEndOf="@id/moviedetails_image_id"
                android:paddingStart="9dp"
                android:text="@string/category"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewTop"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">


                <TextView
                    android:id="@+id/moviedetails_rating_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:text="@string/ratings"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/moviedetails_runtime_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/moviedetails_rating_id"
                    android:paddingStart="12dp"
                    android:text="@string/runtime"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/moviedetails_directedby_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/moviedetails_runtime_id"
                    android:paddingStart="12dp"
                    android:text="@string/directed_by"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/moviedetails_actor_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/moviedetails_directedby_id"
                    android:paddingLeft="12dp"
                    android:text="@string/actor"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/moviedetails_writer_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/moviedetails_actor_id"
                    android:paddingStart="12dp"
                    android:text="@string/writer"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/moviedetails_plot_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/moviedetails_writer_id"
                    android:paddingStart="12dp"
                    android:text="@string/plot"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/moviedetails_boxoffice_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/moviedetails_plot_id"
                    android:paddingStart="12dp"
                    android:text="@string/box_office"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />


            </RelativeLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>