<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView_dialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/search_movie"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_search_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_dialogTitle"
                android:layout_margin="12dp"
                android:text="@string/enter_search_term"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_search_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_search_term"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/ex"
                android:inputType="text" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText_search_term"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/black"
                android:text="@string/search"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>