<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/moviewrow_image_id"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/movierow_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/moviewrow_image_id"
                android:paddingLeft="8dp"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movierow_released_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movierow_title_id"
                android:layout_toEndOf="@id/moviewrow_image_id"
                android:paddingStart="8dp"
                android:text="@string/released"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/movierow_category_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movierow_released_id"
                android:layout_toEndOf="@id/moviewrow_image_id"
                android:paddingStart="9dp"
                android:text="@string/category"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>